<resources>
    <!--    <string name="app_name">MFFApp</string>-->
    <!-- Login Page-->
    <string name="login_header_text">Partner Login</string>
    <string name="login_text">Login</string>
    <string name="login_sub_content_username_text">Please enter your username</string>
    <string name="login_sub_content_text">Please enter your mobile number</string>
    <string name="login_main_header">finance</string>

    <!-- OTP -->
    <string name="resend_text">Resend PIN</string>
    <string name="verification_text">Verification Code</string>
    <string name="code_text">Please type the verification code sent</string>
    <string name="number_bundle">number</string>

    <!--Dashboard-->
    <string name="click_back">Please click again to exit</string>

    <!--Kyc Fragment-->
    <string name="spinner_title">Select Category</string>
    <string-array name="selection_type_list">
        <item>Individual</item>
        <item>Group</item>
        <item>Company</item>
    </string-array>

    <!-- Maps API Key -->
    <string name="map_api_key">AIzaSyDUuDosYB6q1kYQDXhkggXCNd_6Exy8MKc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Under Development</string>

    <!-- Preference Connector keys-->
    <string name="loginStatus">isLoggedIn</string>
    <string name="accessToken">accessToken</string>
    <string name="entityname">entityname</string>
    <string name="portNumber">portNumber</string>
    <string name="baseURL">baseURL</string>
    <string name="phoneNumber">phoneNumber</string>
    <string name="pending">Pending</string>
    <string name="collections">Collections</string>
    <string name="disbursals">Disbursals</string>
    <string name="select_all">Select All</string>
    <string name="collect">Collect</string>
    <string name="collection_cash">Cash</string>
    <string name="collection_wire">Wire</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="next_collection_principal">Next Collection Principal</string>
    <string name="next_collection_interest">Next Collection Interest</string>
    <string name="next_total_collection">Next Total Collection</string>
    <string name="balance">Balance</string>
    <string name="pay">Pay</string>
    <string name="timeout">Timeout</string>
    <string name="nointernet">No Internet</string>
    <string name="generic_error">Oops!! Something went wrong</string>
    <string name="location_rationilze">Need this permission to access the current location</string>
    <string name="do_you_want_pay">Are you sure do you want to Pay?</string>
    <string name="please_enter_some_amount">Please enter some amount</string>
    <string name="print_the_reciept">Do you want to print the receipt?</string>

    <!--Header Details-->
    <string name="onboard">On-board</string>
    <string name="dashboard">Dashboard</string>
    <string name="contracts">Contracts</string>
    <string name="vas">Services</string>
    <string name="payments">Payments</string>
    <string name="savings">Savings</string>
    <string name="verify">Verify</string>
    <string name="details_are_missing">Details are missing!!</string>
    <string name="yes">Yes</string>

    <string name="vas1e">Electricity</string>
    <string name="vas2m">Movie Tickets</string>
    <string name="vas3m">Mobile Recharge</string>
    <string name="vas4w">Water Bill</string>
    <string name="vas5f">Flight Booking</string>
    <string name="vas6d">DTH</string>
    <string name="vas7c">Credit Card</string>
    <string name="vas8t">Train Tickets</string>
    <string name="login">Login</string>
    <string name="please_enter_your_4_digit_code">Please enter your 4 digit code</string>
    <string name="login_with">login with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="four_digit_code">4 Digit Code</string>
    <string name="setup_your_4_digit_code_to_login_easily">Setup your 4 digit code to login easily</string>
    <string name="confirm_four_digit_code">Confirm 4 Digit Code</string>

    <string name="sign_up">Don\'t have account yet? Sign Up</string>
    <string name="login_with_mobile_number">Login with Mobile Number</string>
    <string name="just_sign_up">Sign Up?</string>
    <string name="app_name_mff_client">MFF Client</string>
    <string name="server_client_id">48802848445-o1dk720hfb8em9gn960441vfu31f4unq.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1835340143432268</string>
    <string name="fb_login_protocol_scheme">fb1835340143432268</string>

    <string name="please_enter_mobile">Please enter mobile number</string>
    <string name="four_digit_code_client">Login with 4-digit pin</string>
    <string name="four_digit_code_help_setup">Setup your 4 digit pin for easy login everytime</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="user_name">User Name</string>
    <string name="something_went_erong">Something went wrong. Please try after some time.</string>
    <string name="transactions">Transactions</string>
    <string name="trasnsfers">Transfers</string>
    <string name="loans">Loans</string>

    <string name="verification">Verification Services</string>
    <string name="verification_method">Select your Method of Verification</string>
    <string name="face_verification">Face Verification</string>
    <string name="document_verification">Document Verification</string>
    <string name="document_two_verification">Document 2 Verification</string>
    <string name="address_verification">Address Verification</string>
    <string name="consent_verification">Consent Verification</string>
    <string name="phone_verification">2 Factor Authentication</string>
    <string name="background_verification">Background Checks</string>
    <string name="start_verification">Start Verification</string>
    <string name="provide_credentials">Please provide clientId and secretKey or accessToken before proceed.</string>
    <string name="select_service">Please, select one or more methods of verification.</string>
    <string name="something_went_wrong">Something went wrong. Please try after some time.</string>
    <string name="valid_credentials">Please enter valid credentials.</string>
    <string name="profiles">Profiles</string>
    <string name="business_documents">Business Documents</string>
    <string name="verify_name_sub_text">As stated on your official ID. We need your name to verify your identity.</string>
    <string name="date_of_birth_sub_text">As stated on your official ID. You must be 18 or older to open Revolut account</string>
    <string name="email_sub_text">We\'ll notify you of important changes, new features and benefits.</string>
    <string name="apply">Apply</string>
    <string name="create_profile">Create Profile</string>
    <string name="clear">Clear</string>
    <string name="hierarchy">Hierarchy</string>
    <string name="national_id">National Id</string>
    <string name="identifier">Identifier</string>
    <string name="no_clients_available">No Clients Available</string>
    <string name="check_internet_connection">Please check your internet</string>
    <string name="enter_valid_otp">Please enter valid otp</string>
    <string name="expiry">Expire</string>
    <string name="expiry_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="total_clients">Total Clients</string>
    <string name="apply_card">Apply Card</string>
    <string name="add_sign">+</string>
    <string name="apply_new_card">Apply New Card</string>
    <string name="please_select_a_contract">Please select a Contract</string>
    <string name="loading">Loading…</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="card_already_applied">Card is already applied</string>
    <string name="select_the_account_you_want_to_block">Select the account you want to block</string>
    <string name="block">Block</string>
    <string name="check_balance">Check Balance</string>
    <string name="product_name">Product Name:</string>
    <string name="contract_id">Contract ID:</string>
    <string name="notional_principal">Notional Principal:</string>
    <string name="block_card">Block Card</string>
    <string name="data_not_found">Data not found</string>
    <string name="select_card">Please select card</string>
    <string name="card_applied_successfully">Card applied successfully</string>
    <string name="create_account">Create Account</string>
    <string name="log_in"><![CDATA[> LOG IN]]></string>
    <string name="next">Next</string>
    <string name="view">View</string>
    <string name="sign">Sign</string>
    <string name="terms">Terms</string>
    <string name="no_disbursals_available">No Disbursals Available</string>
    <string name="transaction_history">Transaction History</string>
    <string name="transfer">TRANSFER</string>
    <string name="deposit_placement">Deposit Placement</string>
    <string name="ok">Ok</string>
    <string name="selected_branch">Selected Branch</string>
    <string name="enter_otp">Enter OTP:</string>
    <string name="signup_with_mobile_number">Signup with mobile number</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="get_started">Get Started</string>
    <string name="branch">Branch</string>
    <string name="logout">Logout</string>
    <string name="buy_data">Buy Data</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="transfer_small">Transfer</string>
    <string name="airtime">Airtime</string>

</resources>
