<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="#14bbf5bb">

        <ImageView
            android:id="@+id/headerIconIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/finance1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerIconIV"
            android:gravity="center_horizontal"
            android:text="@string/login_main_header"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nextbtnLayout"
        android:layout_below="@+id/header_layout"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/margin_bottom_header_login"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_header_login"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:background="@drawable/login_btn_selector"
                    android:focusable="true"
                    android:gravity="start|center_vertical"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@android:color/black" />

                <EditText
                    android:singleLine="true"
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/login_btn_selector"
                    android:focusable="true"
                    android:gravity="start|center_vertical"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@android:color/black" />


                <EditText
                    android:singleLine="true"
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/login_btn_selector"
                    android:focusable="true"
                    android:gravity="start|center_vertical"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@android:color/black" />


                <EditText
                    android:singleLine="true"
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/login_btn_selector"
                    android:focusable="true"
                    android:gravity="start|center_vertical"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/login_btn_selector"
                    android:dropDownVerticalOffset="40dp"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:spinnerMode="dropdown"
                    android:visibility="visible" />

                <EditText
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/login_btn_selector"
                    android:focusable="true"
                    android:gravity="start|center_vertical"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@android:color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:background="@drawable/login_btn_selector"
                    android:focusable="true"
                    android:gravity="start|center_vertical"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/setup_your_4_digit_code_to_login_easily" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5dp"
                        android:background="@drawable/login_btn_selector"
                        android:focusable="true"
                        android:gravity="start|center_vertical"
                        android:hint="@string/four_digit_code"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/login_btn_selector"
                        android:focusable="true"
                        android:gravity="start|center_vertical"
                        android:hint="@string/confirm_four_digit_code"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/nextbtnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/nextBTNIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:onClick="nextBtnClicked"
            android:src="@drawable/next_button" />

    </LinearLayout>
</RelativeLayout>