<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dashboard.ApplyNewCardActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_applyCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBottomBar"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_back_apply_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/apply_new_card"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_18" />


        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/select_contract_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/please_select_a_contract"
            android:textSize="@dimen/sp_18" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contracts_listRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/apply_new_card_item" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/gray"

            android:enabled="false"
            android:gravity="center"
            android:padding="@dimen/_5dp"
            android:text="@string/apply"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>