<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/backBTNIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="backBTNClicked"
            android:padding="@dimen/toolbar_icon_padding"
            android:src="@drawable/left_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/verification_text"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_help_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/code_text"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/phoneNumberTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="normal" />

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            style="@style/OtpWidget.OtpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:inputType="number"
            android:itemBackground="@drawable/login_code_btn_selector"
            android:textColor="@android:color/black"
            app:itemCount="4"
            app:itemHeight="60dp"
            app:itemSpacing="@dimen/_15dp"
            app:itemWidth="60dp"
            app:lineColor="@color/colorBlack"
            app:viewType="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:onClick="sendOTP"
            android:padding="@dimen/_10dp"
            android:text="@string/resend_text"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:onClick="nextBTNClick"
            android:src="@drawable/next_button" />
    </LinearLayout>
</LinearLayout>